--- a/include/views/default/cockpit2/frontend/restaurants/restaurant-order-placement-dashboard.phtml
+++ b/include/views/default/cockpit2/frontend/restaurants/restaurant-order-placement-dashboard.phtml
@@ -48,8 +48,8 @@
 		<div>Place a new order</div>
 	</div>
 
-	<a class="dashboard-box call-support"  ng-href="tel:{{status.phone}}">
-		<span>Call Crunchbutton Support</span>
+	<a href class="dashboard-box call-support" ng-click="callText(status.phone_formatted)">
+		<span>Crunchbutton Support</span>
 	</a>
 
 	<div class="dashboard-box phone">
