Re-Try Payments Automatically #3750

--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-scheduled.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-scheduled.phtml
@@ -53,6 +53,12 @@
 				<div class="divider"></div>
 			</div>
 
+			<div ng-click="do_err_payments()" class="orange link left">
+				<br/>
+					<strong>Process errors all again</strong>
+				<br/>
+			</div>
+
 			<table class="tb-grid tb-zebra">
 				<thead>
 					<tr>
