--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -22,6 +22,17 @@
 					</tr>
 				</table>
 			</a>
+			
+			<a href="/tickets" class="menu-link" ng-if="account.user.permissions.GLOBAL" ng-class="{'nav-active': (navigation.page == 'tickets' || navigation.page == 'ticket')}">
+				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+					<tr>
+						<td class="side-menu-icon"><i class="fa fa-comments-o"></i></td>
+						<td class="side-menu-label">Support</a></td>
+					</tr>
+				</table>
+			</a>
+			
+			
 			<a href="/drivers/orders" class="menu-link" ng-if="account.user.permissions.GLOBAL || account.isDriver" ng-class="{'nav-active': (navigation.page == 'drivers-orders')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
