--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -2341,6 +2341,55 @@ b, strong{ font-weight: bold; }
 	border: 5px;
 }
 
+.box-content-color {
+	background: #fff;
+	margin-bottom: 15px;
+}
+
+.support-box-wrap {
+	width: 50%;
+	display: inline-block;
+}
+.support-box-wrap:nth-child(odd) .box-content-color {
+	margin-right: 15px;
+}
+
+.support-box-wrap h1 {
+	font-size: 1.8em;
+	font-family: Source Sans Pro, Helvetica, sans-serif;
+	font-weight: 300;
+	color: #5d5f63;
+	margin-bottom: .4em;
+}
+
+.field-container {
+	display: table;
+	width: 100%;
+}
+
+.field-container .field-key, .field-container .field-value {
+	display: table-cell;
+	padding: .7em;
+	border-bottom: 1px solid #f1f2f7;
+	line-height: 1.5em;
+}
+
+.field-container .field-row {
+	font-size: 1.2em;
+	display: table-row;
+}
+
+.field-container .field-key {
+	color: #74777e;
+	text-align: left;
+	white-space: nowrap;
+}
+
+.field-container .field-value {
+	color: #2a2c2f;
+	text-align: right;
+}
+
 .order-contents {
 	background: #fff;
 	margin-bottom: 1.5em;
