linked up ticket side bar events

--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-list.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-list.phtml
@@ -3,9 +3,9 @@
 		<div ng-if="account.user.permissions.GLOBAL">
 			<h1>Tickets</h1>
 			<div class="tickets-side-tickets">
-				<div ng-repeat="ticket in tickets" class="tickets-side-item" ng-class="{'tickets-side-item-unread': (ticket.from == 'client' || ticket.from == 'system'), 'tickets-side-item-read': (ticket.from == 'rep')}">
+				<div ng-repeat="ticket in tickets" ng-click="setViewTicket(ticket.id_support)" class="tickets-side-item" ng-class="{'tickets-side-item-unread': (ticket.from == 'client' || ticket.from == 'system'), 'tickets-side-item-read': (ticket.from == 'rep')}">
 					<div class="tickets-side-tickets-wrap">
-						<a class="tickets-side-ticket" ng-click="setViewTicket(ticket.id_support)">#{{ticket.id_support}}</a>
+						<a class="tickets-side-ticket" href="/ticket/{{ticket.id_support}}">#{{ticket.id_support}}</a>
 						<span class="tickets-side-time">10 m ago</span>
 						<div class="divider"></div>
 						<br>
