--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -95,7 +95,7 @@
 		*/ ?>
 		
 		<div class="support-box-wrap">
-			<h1>Resolution <a href><i class="fa fa-comment-o"></i></a></h1>
+			<h1>Resolution <a href ng-click="triggerViewTicket(ticket.id_support)"><i class="fa fa-comment-o"></i></a></h1>
 			<div class="box-content-color">
 				<div class="field-container">
 					<div class="field-row">
