--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -2895,6 +2895,7 @@ body.ng-scope {
 .tickets-side-item {
 	border-bottom: 1px solid #474a53;
 	line-height: .7em;
+	cursor: pointer;
 }
 
 .tickets-side-name {
