--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -218,8 +218,8 @@
 		<div class="left-menu-fix"></div>
 		<div class="snap-drawer snap-drawer-right side-menu" id="side-menu-right">
 			<div class="drawer-right-content" ng-controller="SideSupportCtrl">
-				<div ng-include="'assets/view/tickets-side-list.html'" ng-if="!viewTicket"></div>
-				<div ng-include="'assets/view/tickets-side-view.html'" ng-if="viewTicket"></div>
+				<div class="drawer-right-content-list" ng-include="'assets/view/tickets-side-list.html'" ng-if="!viewTicket"></div>
+				<div class="drawer-right-content-view" ng-include="'assets/view/tickets-side-view.html'" ng-if="viewTicket"></div>
 			</div>
 		</div>
 	</div>
