--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -13,6 +13,13 @@
 	
 	<div class="support-boxes">
 	
+		<div ng-if="!ticket.order.id_order" class="support-box-wrap">
+			<h1>&nbsp;</h1>
+			<div class="box-content-color">
+				No order, customer, or restaurant associated with issue.
+			</div>
+		</div>
+	
 		<div ng-if="ticket.user.id_user" class="support-box-wrap">
 			<h1>Customer <a href="/customer/{{ticket.user.id_user}}">#{{ticket.user.id_user}}</a></h1>
 			<div class="box-content-color">
@@ -97,17 +104,21 @@
 		<div class="support-box-wrap">
 			<h1>Resolution <a href ng-click="triggerViewTicket(ticket.id_support)"><i class="fa fa-comment-o"></i></a></h1>
 			<div class="box-content-color">
-				<div class="field-container">
-					<div class="field-row">
-						<div class="field-key">Who is to blame?</div>
-						<div class="field-value">@todo</div>
+				<div ng-if="ticket.order.id_order">
+					<div class="field-container">
+						<div class="field-row">
+							<div class="field-key">Who is to blame?</div>
+							<div class="field-value">@todo</div>
+						</div>
+					</div>
+					<div class="field-button-wrap">
+						<div class="field-button"><button class="button orange">Refund</button></div>
 					</div>
 				</div>
-				<div class="field-button-wrap">
-					<div class="field-button"><button class="button orange">Refund</button></div>
-				</div>
-				<div class="field-button-wrap">
-					<div class="field-button"><button class="button orange">Gift Card</button></div>
+				<div ng-if="ticket.user.id_user">
+					<div class="field-button-wrap">
+						<div class="field-button"><button class="button orange">Gift Card</button></div>
+					</div>
 				</div>
 				<div class="field-button-spacer"></div>
 			</div>
