--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
@@ -3,7 +3,7 @@
 		<table style="height: 100%">
 			<tr><td class="support-chat-header">
 				<a class="support-chat-header-back" ng-click="setViewTicket(0)">&nbsp;<i class="fa fa-chevron-left"></i> Issues</a>
-				<a class="support-chat-header-issue" href="{{ticket.id_support}}">#{{ticket.id_support}}</a>
+				<a class="support-chat-header-issue" href="/ticket/{{ticket.id_support}}">#{{ticket.id_support}}</a>
 				<div class="divider"></div>
 				<div class="support-chat-header-details">
 					
