--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -50,6 +50,7 @@
 
 <!-- AngularJS Directives -->
 <script src="/assets/js/directives.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/directives.js?v=<?=Cana_Util::gitVersion()?>"></script>
 
 <script src="/assets/cockpit/js/angular-file-upload.js?v=<?=Cana_Util::gitVersion()?>"></script>
 
