added desktop notifications for chat events
fixes #4015

--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
@@ -25,7 +25,7 @@
 			</td></tr>
 			<tr><td class="support-side-chat-row">
 				<div class="support-chat-box-wrap">
-					<textarea class="support-chat-box" placeholder="Type someting and press enter..." chat-send></textarea>
+					<textarea id="support-chat-box" class="support-chat-box" placeholder="Type someting and press enter..." chat-send></textarea>
 				</div>
 			</td></tr>
 		</table>
