--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -73,3 +73,4 @@
 <script src="/assets/cockpit/js/service.tickets.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.heartbeat.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.push.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.notification.js?v=<?=Cana_Util::gitVersion()?>"></script>
