--- a/include/views/default/cockpit2/layout/html.bottom.phtml
+++ b/include/views/default/cockpit2/layout/html.bottom.phtml
@@ -20,6 +20,13 @@ $(function() {
 });
 </script>
 
+<audio id="support-message-new">
+	<source src="/assets/cockpit/audio/message-creation.wav"></source>
+</audio>
+<audio id="support-message-recieved">
+	<source src="/assets/cockpit/audio/message-inbound.wav"></source>
+</audio>
+
 <? /*
 <script type="text/javascript">
 	$(function() {
