--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3087,3 +3087,18 @@ h1.driver-title {
 	color: #363636;
 }
 
+
+.support-chat-contents-scroll div {
+	-webkit-transform: translateZ(0);
+    animation: fadeIn 200ms 1;
+    -webkit-animation: fadeIn 200ms 1;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1.0; }
+}
